--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "doti3/i3_kde_KLI"]
 	path = doti3/i3_kde_KLI
 	url = git@github.com:ViktorWalter/i3_kde_KLI.git
+[submodule "doti3/i3"]
+	path = doti3/i3
+	url = git@github.com:sLite/i3.git
