--- a/doti3/config
+++ b/doti3/config
@@ -9,6 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
+exec --no-startup-id yakuake
 
 set $mod Mod1
 set $mod2 Mod4
