--- a/doti3/config
+++ b/doti3/config
@@ -196,6 +196,9 @@ for_window [class="Yakuake"] floating enable
 for_window [class="Yakuake"] border 0pixel
 exec plasmashell
 
+for_window [class="lazarus"] floating enable
+for_window [class="Lazarus"] floating enable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #bar {
@@ -247,7 +250,9 @@ exec --no-startup-id nm-applet
 exec google-chrome
 
 # setup monitors, generete the file with "arandr" utility
-exec ~/.monitor.sh
+exec --no-startup-id ~/.i3/swapLayout.sh
+#~/.screenlayout/Single.sh
+bindsym $mod+Shift+p exec ~/.i3/swapLayout.sh
 
 ## swapping keyboard layouts? the same as in classic windows
 exec --no-startup-id "setxkbmap -model pc105 -layout us,sk -variant ,qwerty -option grp:alt_shift_toggle"
@@ -292,3 +297,6 @@ exec --no-startup-id compton -f -D 3
 
 #Invert screen color
 bindsym $mod+Ctrl+i exec ~/.i3/invertOutputs.sh 
+
+#Banish the mouse pointer to the corner
+bindsym $mod+b exec ~/.i3/banishMouse.sh 
