--- a/dottmux.conf
+++ b/dottmux.conf
@@ -150,15 +150,7 @@ bind p paste-buffer
 
 # key bindings for moving over pannels
 # binded to arrows for normal people
-bind-key -n M-Left select-pane -L
-bind-key -n M-Right select-pane -R
-bind-key -n M-Up select-pane -U
-bind-key -n M-Down select-pane -D
 # binded to yuio for me
-bind-key -n M-y select-pane -L
-bind-key -n M-o select-pane -R
-bind-key -n M-i select-pane -U
-bind-key -n M-u select-pane -D
 
 # colors
 set-option -g default-terminal "screen-256color"
@@ -175,23 +167,21 @@ bind-key k \
   send-keys "tmux list-panes -s -F \"#{pane_pid} #{pane_current_command}\" | grep -v tmux | awk '{print $1}' | while read in; do killp \$in; done" C-m exit C-m
 
 # create new split and window bindings (plus should stay on the current path)
-bind -n C-s split-window -v -c "#{pane_current_path}"
-bind -n C-d split-window -h -c "#{pane_current_path}"
+bind -n C-d split-window -v -c "#{pane_current_path}"
+bind -n C-s split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # remap Ctrl-b
 #set-option -g prefix C-a
 
 bind -n C-t new-window -a -c "#{pane_current_path}"
-bind -n S-left  prev
-bind -n S-right next
-bind -n C-j   next
-bind -n C-k   prev
+bind -n S-up  prev
+bind -n S-down next
+bind -n M-n  prev
+bind -n M-m  next
 bind -n S-C-left  swap-window -t -1
 bind -n S-C-right swap-window -t +1
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
 
 #set -g base-index 1
 #set -g pane-base-index 1
@@ -205,19 +195,17 @@ set -sg escape-time 0
 
 bind C-e command-prompt -p "session?,message?" "run-shell \"tmux list-windows -t %1 \| cut -d: -f1\|xargs -I\{\} tmux send-keys -t %1:\{\} %2\""
 
-# load additional user's config file
 
-unbind -n S-left
-unbind -n S-right
-unbind -n S-up
-unbind -n S-down
-unbind -n C-j   
-unbind -n C-k  
-unbind -n C-s
-unbind -n C-d
-
-bind -n S-down next
-bind -n S-up prev
+bind -n C-0 select-window -t :0
+bind -n C-1 select-window -t :1
+bind -n C-2 select-window -t :2
+bind -n C-3 select-window -t :3
+bind -n C-4 select-window -t :4
+bind -n C-5 select-window -t :5
+bind -n C-6 select-window -t :6
+bind -n C-7 select-window -t :7
+bind -n C-8 select-window -t :8
+bind -n C-9 select-window -t :9
 
 
 # set error search
@@ -236,10 +224,12 @@ set-option -g prefix C-b
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
+
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind C-| split-window -h -c "#{pane_current_path}"
-bind C-_ split-window -v -c "#{pane_current_path}"
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
