--- a/doti3/config
+++ b/doti3/config
@@ -96,16 +96,16 @@ bindsym $mod+a focus parent
 bindsym $mod+Shift+a focus child
 
 # define title/names of all workspaces
-set $workspace1 "1         "
-set $workspace2 "2         "
-set $workspace3 "3         "
-set $workspace4 "4         "
-set $workspace5 "5         "
-set $workspace6 "6         "
-set $workspace7 "7         "
-set $workspace8 "8         "
-set $workspace9 "9         "
-set $workspace10 "10         "
+set $workspace1 "1        1"
+set $workspace2 "2        2"
+set $workspace3 "3        3"
+set $workspace4 "4        4"
+set $workspace5 "5        5"
+set $workspace6 "6        6"
+set $workspace7 "7        7"
+set $workspace8 "8        8"
+set $workspace9 "9        9"
+set $workspace10 "10       10"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -247,7 +247,7 @@ bindsym $mod+F4 exec xbacklight -set 100 # INCREASE Screen brightness
 
 # Startup programs
 exec --no-startup-id nm-applet
-exec google-chrome
+#exec google-chrome
 
 # setup monitors, generete the file with "arandr" utility
 exec --no-startup-id ~/.i3/swapLayout.sh
@@ -255,7 +255,7 @@ exec --no-startup-id ~/.i3/swapLayout.sh
 bindsym $mod+Shift+p exec ~/.i3/swapLayout.sh
 
 ## swapping keyboard layouts? the same as in classic windows
-exec --no-startup-id "setxkbmap -model pc105 -layout us,sk -variant ,qwerty -option grp:alt_shift_toggle"
+exec --no-startup-id "setxkbmap -model pc101 -layout us,sk -variant ,qwerty -option grp:alt_shift_toggle"
 #exec --no-startup-id "setxkbmap us"
 #bindsym $mod+Shift exec ~/.i3/toggle_keyboard_layout.sh
 
@@ -300,3 +300,6 @@ bindsym $mod+Ctrl+i exec ~/.i3/invertOutputs.sh
 
 #Banish the mouse pointer to the corner
 bindsym $mod+b exec ~/.i3/banishMouse.sh 
+
+#Printscreen
+bindsym Print exec scrot -e 'mv $f ~/Pictures/'
