--- a/doti3/config
+++ b/doti3/config
@@ -255,7 +255,9 @@ exec --no-startup-id ~/.i3/swapLayout.sh
 bindsym $mod+Shift+p exec ~/.i3/swapLayout.sh
 
 ## swapping keyboard layouts? the same as in classic windows
-exec --no-startup-id "setxkbmap -model pc101 -layout us,sk -variant ,qwerty -option grp:alt_shift_toggle"
+exec_always --no-startup-id "setxkbmap -model pc101 -layout us,sk -variant ,qwerty -option \"grp:alt_shift_toggl\"e"
+exec_always --no-startup-id "setxkbmap -option \"caps:escape\""
+exec_always --no-startup-id "xmodmap -e \"keycode 105 = Menu NoSymbol Control_R\""
 #exec --no-startup-id "setxkbmap us"
 #bindsym $mod+Shift exec ~/.i3/toggle_keyboard_layout.sh
 
@@ -264,8 +266,8 @@ for_window [class="^Google-chrome$"] border none
 # for_window [class="^Gnome-terminal$"] border pixel 1
 
 # oh my God disable caps lock and set is as escape!!!
-exec_always xmodmap -e "clear lock" #disable caps lock switch
-exec_always xmodmap -e "keysym Caps_Lock = Escape" #set caps_lock as escape
+# exec_always xmodmap -e "clear lock" #disable caps lock switch
+# exec_always xmodmap -e "keysym Caps_Lock = Escape" #set caps_lock as escape
 
 # assing windows to particular workspaces
 # find the class name by running "xprop" in bash and then click on th window
@@ -303,3 +305,11 @@ bindsym $mod+b exec ~/.i3/banishMouse.sh
 
 #Printscreen
 bindsym Print exec scrot -e 'mv $f ~/Pictures/'
+
+#control the mouse with keyboard
+bindsym $mod2+h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
+bindsym $mod2+l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
+bindsym $mod2+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
+bindsym $mod2+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
+bindsym $mod2+space exec --no-startup-id xdotool click 1
+bindsym $mod2+i exec --no-startup-id  xdotool click 3
