--- a/doti3/config
+++ b/doti3/config
@@ -311,5 +311,9 @@ bindsym $mod2+h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
 bindsym $mod2+l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
 bindsym $mod2+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
 bindsym $mod2+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
+bindsym $mod2++shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -100 0
+bindsym $mod2+shift++l exec --no-startup-id xdotool mousemove_relative --sync -- 100 0
+bindsym $mod2+shift++j exec --no-startup-id xdotool mousemove_relative --sync -- 0 100
+bindsym $mod2+shift++k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -100
 bindsym $mod2+space exec --no-startup-id xdotool click 1
 bindsym $mod2+i exec --no-startup-id  xdotool click 3
