--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -24,55 +24,55 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/share/i3blocks/$BLOCK_NAME
+command=~/git/linux-setup/appconfig/i3/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
 [101]
 command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
 [102]
 command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
 [103]
 command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
 [104]
 command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
 [105]
 command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
 [106]
 command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
 [107]
 command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
 [108]
 command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
-color=#00FF00
+color=#008800
 interval=10
 separator=true
 
@@ -80,7 +80,7 @@ separator=true
 label=ROS_IP
 interval=20
 command=$HOME/.i3/ros_ip.sh
-#color=#000000
+color=#000000
 
 [rosmasteruri]
 label=ROS_MASTER
@@ -92,27 +92,27 @@ color=#000000
 #label=UAV_NAME
 interval=20
 command=$HOME/.i3/uav_name.sh
-#color=#000000
+color=#000000
 
 [load]
 interval=5
 label= 
-command=cat /proc/loadavg | cut -d' ' -f1-3
-#color=#000000
+command=cat /proc/loadavg | cut -d' ' -f1-1
+color=#000000
 
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
-instance=wlan0
-color=#00FF00
+instance=enx00133b85141c
+color=#000000
 interval=10
 separator=true
 
 [iface]
-instance=eth0
-color=#00FF00
+instance=wlp58s0
+color=#000000
 interval=10
 separator=true
 
@@ -121,34 +121,26 @@ command=ping -c 1 google.com >> /dev/null||echo 'No Internet'
 color=#FF0000
 interval=20
 
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
-[volume]
-label=VOL
-label=♪
-instance=Master
-#instance=PCM
-interval=1
-signal=10
-command=/usr/share/i3blocks/volume 5 pulse
-#color=#000000
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-#[memory]
-#label=MEM
-#separator=false
-#interval=30
+[memory]
+label=🞕
+separator=true
+interval=10
+signal=10
+command=~/git/linux-setup/appconfig/i3/i3blocks/memory 5 pulse
+color=#000000
 
-#[memory]
-#label=SWAP
-#instance=swap
-#separator=false
-#interval=30
+# [memory]
+# label=SWAP
+# instance=swap
+# separator=false
+# interval=10
+# signal=10
+# command=~/git/linux-setup/appconfig/i3/i3blocks/ 5 pulse
+# color=#000000
 
 # Disk usage
 #
@@ -156,17 +148,18 @@ command=/usr/share/i3blocks/volume 5 pulse
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=SSD
+label=💿
 #instance=/mnt/data
 interval=30
-#color=#000000
+color=#000000
+separator=true
 
 [wifi]
-#instance=wlp3s0
+instance=wlan0
 label=
 interval=10
 separator=true
-#color=#000000
+color=#000000
 
 #[bandwidth]
 ##instance=eth0
@@ -184,6 +177,21 @@ separator=true
 #min_width=CPU: 100.00%
 ##separator=false
 
+# Volume indicator
+#
+# The first parameter sets the step (and units to display)
+# The second parameter overrides the mixer selection
+# See the script for details.
+[volume]
+label=VOL
+label=♪
+instance=Master
+#instance=PCM
+interval=1
+signal=10
+command=~/git/linux-setup/appconfig/i3/i3blocks/volume 5 pulse
+color=#000000
+
 # Battery indicator
 #
 # The battery instance defaults to 0.
@@ -192,13 +200,13 @@ label=BAT
 label=⚡
 instance=0
 interval=30
-#color=#000000
+color=#000000
 
 [keyboard]
 label=
 interval=1
 command=~/.i3/show_keyboard_layout.sh
-#color=#000000
+color=#000000
 
 # Date Time
 #
@@ -206,13 +214,13 @@ command=~/.i3/show_keyboard_layout.sh
 command=date '+%d/%m/%Y %H:%M:%S'
 interval=1
 separator=true
-#color=#000000
+color=#000000
 
 [clickme]
 full_text=
 command=~/.i3/shutdown_menu -p rofi
 separator=true
-#color=#000000
+color=#000000
 
 # Generic media player support
 #
