--- a/doti3/fonts.conf
+++ b/doti3/fonts.conf
@@ -3,10 +3,16 @@
 <fontconfig>
   <match target="font">
       <test name="size" qual="any" compare="less">
-        <double>12</double>
+        <double>11</double>
       </test>
       <edit mode="assign" name="antialias">
         <bool>false</bool>
+      </edit>
+  </match>
+
+  <match target="font">
+      <edit mode="assign" name="hintstyle">
+        <const>hintmedium</const>
       </edit>
   </match>
 </fontconfig>
