--- a/doti3/config
+++ b/doti3/config
@@ -27,7 +27,7 @@ font pango:System San Francisco Display 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec konsole
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -253,6 +253,11 @@ exec --no-startup-id nm-applet
 exec --no-startup-id ~/.i3/swapLayout.sh
 #~/.screenlayout/Single.sh
 bindsym $mod+Shift+p exec ~/.i3/swapLayout.sh
+
+# turn off monitor for nightly processing
+bindsym $mod+Shift+o exec "sleep 0.5; i3lock -d"
+
+
 
 ## swapping keyboard layouts? the same as in classic windows
 exec_always --no-startup-id "sleep 2; setxkbmap -model pc101 -layout us,sk -variant ,qwerty -option \"grp:alt_shift_toggl\"e"
