Better hinting for fonts.

--- a/doti3/fonts.conf
+++ b/doti3/fonts.conf
@@ -3,7 +3,7 @@
 <fontconfig>
   <match target="font">
       <test name="size" qual="any" compare="less">
-        <double>11</double>
+        <double>10</double>
       </test>
       <edit mode="assign" name="antialias">
         <bool>false</bool>
@@ -12,7 +12,7 @@
 
   <match target="font">
       <edit mode="assign" name="hintstyle">
-        <const>hintmedium</const>
+        <const>hintfull</const>
       </edit>
   </match>
 </fontconfig>
