--- a/doti3/config
+++ b/doti3/config
@@ -162,6 +162,8 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+set $transparent #00000000
+
 # LIGHT COLOR_SCHEME {
 # set $inactive_text_color         #1d2021
 # set $active_text_color           #1d2021
@@ -203,29 +205,37 @@ for_window [class="plasma-desktop"] floating enable
 for_window [class="Yakuake"] floating enable
 for_window [class="Yakuake"] border 0pixel
 exec plasmashell
+exec kdeinit5 kded5
+
+# exec wmsystemtray --bgcolor grey --fgcolor white --non-wmaker
 
 for_window [class="lazarus"] floating enable
 for_window [class="Lazarus"] floating enable
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-#
-#	colors {
-#		background $bg-color
-#	  separator #757575
-#		#                  border             background         text
-#		focused_workspace  $focused-bg-color  $focused-bg-color  $text-color
-#		inactive_workspace $inactive-bg-color $inactive-bg-color $text-color
-#		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-#	}
-#
-#	# i3bar position
-#	position bottom
-#
-#	# Using custom i3status.conf
-#	status_command i3blocks -c ~/.i3/i3blocks.conf
-#}
+# bar {
+
+#   status_command i3blocks -c ~/.i3/i3blocks.conf
+#   i3bar_command i3bar 
+
+#   colors {
+
+#     statusline $text_color
+#     background $background_color
+#     separator  $inactive_text_color
+
+#     #                  border             background           text
+#     focused_workspace  $focused_ws_bg     $focused_ws_bg       $active_text_color
+#     active_workspace   $transparent       $transparent         $active_text_color
+#     inactive_workspace $transparent       $transparent         $active_text_color
+#     binding_mode       $transparent       $transparent         $active_text_color
+#     urgent_workspace   $transparent       $transparent         $active_text_color
+#   }
+
+#   # i3bar position
+#   position bottom
+# }
 #
 # kde runner
 bindsym $mod+F2 exec krunner
@@ -254,7 +264,7 @@ bindsym $mod+F3 exec xbacklight -set 0 # INCREASE Screen brightness
 bindsym $mod+F4 exec xbacklight -set 100 # INCREASE Screen brightness
 
 # Startup programs
-exec --no-startup-id nm-applet
+# exec --no-startup-id nm-applet
 #exec google-chrome
 
 # setup monitors, generete the file with "arandr" utility
@@ -268,8 +278,8 @@ bindsym $mod+Shift+o exec ~/.i3/rotateScreen.sh
 
 
 ## swapping keyboard layouts? the same as in classic windows
-exec_always --no-startup-id "sleep 2; setxkbmap -model pc101 -layout us,sk -variant ,qwerty -option \"grp:sclk_toggle\""
-exec_always --no-startup-id "sleep 3; setxkbmap -option \"caps:escape\""
+exec_always --no-startup-id "sleep 4; setxkbmap -model pc101 -layout us,sk -variant ,qwerty -option \"grp:sclk_toggle\""
+exec_always --no-startup-id "sleep 5; setxkbmap -option \"caps:escape\""
 exec_always --no-startup-id "xmodmap -e \"keycode 105 = Menu NoSymbol Control_R\""
 #exec --no-startup-id "setxkbmap us"
 #bindsym $mod+Shift exec ~/.i3/toggle_keyboard_layout.sh
