--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -30,49 +30,57 @@ markup=none
 
 [101]
 command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [102]
 command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [103]
 command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [104]
 command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [105]
 command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [106]
 command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [107]
 command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [108]
 command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
-color=#008800
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
@@ -80,40 +88,48 @@ separator=true
 label=ROS_IP
 interval=20
 command=$HOME/.i3/ros_ip.sh
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [rosmasteruri]
 label=ROS_MASTER
 interval=20
 command=$HOME/.i3/ros_master_uri.sh
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [uav_name]
 #label=UAV_NAME
 interval=20
 command=$HOME/.i3/uav_name.sh
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [load]
 interval=5
 label= 
-command=cat /proc/loadavg | cut -d' ' -f1-1
-color=#000000
+command=cat /proc/loadavg | cut -d' ' -f1-3
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
-instance=enx00133b85141c
-color=#000000
+instance=eth0
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
+label=
 separator=true
 
 [iface]
-instance=wlp58s0
-color=#000000
+instance=wlan0
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
+label=
 separator=true
 
 [online-status]
@@ -121,26 +137,35 @@ command=ping -c 1 google.com >> /dev/null||echo 'No Internet'
 color=#FF0000
 interval=20
 
+# Volume indicator
+#
+# The first parameter sets the step (and units to display)
+# The second parameter overrides the mixer selection
+# See the script for details.
+[volume]
+label=VOL
+label=♪
+instance=Master
+#instance=PCM
+interval=1
+signal=10
+command=~/git/linux-setup/appconfig/i3/i3blocks/volume 5 pulse
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-[memory]
-label=🞕
-separator=true
-interval=10
-signal=10
-command=~/git/linux-setup/appconfig/i3/i3blocks/memory 5 pulse
-color=#000000
+#[memory]
+#label=MEM
+#separator=false
+#interval=30
 
-# [memory]
-# label=SWAP
-# instance=swap
-# separator=false
-# interval=10
-# signal=10
-# command=~/git/linux-setup/appconfig/i3/i3blocks/ 5 pulse
-# color=#000000
+#[memory]
+#label=SWAP
+#instance=swap
+#separator=false
+#interval=30
 
 # Disk usage
 #
@@ -148,18 +173,19 @@ color=#000000
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=💿
+label=SSD
 #instance=/mnt/data
 interval=30
-color=#000000
-separator=true
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [wifi]
 instance=wlan0
 label=
 interval=10
 separator=true
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 #[bandwidth]
 ##instance=eth0
@@ -177,21 +203,6 @@ color=#000000
 #min_width=CPU: 100.00%
 ##separator=false
 
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
-[volume]
-label=VOL
-label=♪
-instance=Master
-#instance=PCM
-interval=1
-signal=10
-command=~/git/linux-setup/appconfig/i3/i3blocks/volume 5 pulse
-color=#000000
-
 # Battery indicator
 #
 # The battery instance defaults to 0.
@@ -200,13 +211,15 @@ label=BAT
 label=⚡
 instance=0
 interval=30
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [keyboard]
 label=
 interval=1
 command=~/.i3/show_keyboard_layout.sh
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Date Time
 #
@@ -214,13 +227,15 @@ color=#000000
 command=date '+%d/%m/%Y %H:%M:%S'
 interval=1
 separator=true
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [clickme]
 full_text=
 command=~/.i3/shutdown_menu -p rofi
 separator=true
-color=#000000
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Generic media player support
 #
