--- a/dottmux.conf
+++ b/dottmux.conf
@@ -1,92 +1,53 @@
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-
-## Status bar design
-# status line
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
-
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
-
-
-set -g default-terminal "screen-256color"
-
-# The modes {
-setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour15
-setw -g mode-bg colour238
-
-# }
 # The panes {
 
+# LIGHT COLOR_SCHEME {
+# set -g pane-border-bg colour235
+# set -g pane-border-fg colour15
+# set -g pane-active-border-bg colour236
+# set -g pane-active-border-fg colour15
+# # }
+
+# JELLYBEANS COLOR_SCHEME ACTIVE {
 set -g pane-border-bg colour235
-set -g pane-border-fg colour15
+set -g pane-border-fg colour26
 set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour15
-
+set -g pane-active-border-fg colour26
 # }
-# The statusbar {
 
+# The statusbar {
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour15
 set -g status-attr dim
-set -g status-left ''
-set -g status-right '#[fg=colour15,bg=colour241,bold] %d/%m #[fg=colour15,bg=colour245,bold] %H:%M:%S #[fg=colour15,bg=colour241,bold] #H '
+
+# }
+# JELLYBEANS COLOR_SCHEME ACTIVE {
+set -g status-left "#[fg=colour15,bg=colour26] #S #[fg=colour103,bg=colour236,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour239] #(echo $ROS_MASTER_URI) #[fg=colour239,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour248,bg=colour239] %H:%M #[fg=colour15,bg=colour26] #H"
+# }
+
+# LIGHT COLOR_SCHEME {
+# set -g status-left ''
+# set -g status-right '#[fg=colour15,bg=colour241,bold] %d/%m #[fg=colour15,bg=colour245,bold] %H:%M:%S #[fg=colour15,bg=colour241,bold] #H '
+# # }
+
 set -g status-right-length 50
 set -g status-left-length 20
 
 setw -g window-status-current-fg colour15
 setw -g window-status-current-bg colour238
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-current-format "#[fg=colour236,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour253,bg=colour239] #I |#[fg=colour253,bg=colour239] #W #[fg=colour239,bg=colour236,nobold,nounderscore,noitalics]" # JELLYBEANS COLOR_SCHEME ACTIVE 
+# setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F ' # LIGHT COLOR_SCHEME 
 
 setw -g window-status-fg colour15
 setw -g window-status-bg colour235
 setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format "#[fg=colour244,bg=colour236] #I |#[fg=colour244,bg=colour236] #W " # JELLYBEANS COLOR_SCHEME ACTIVE 
+# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F ' # LIGHT COLOR_SCHEME 
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
 # }
-# The messages {
-
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
-
-# }
-# colors
-set-option -g default-terminal "screen-256color"
-
-set -g status-fg colour137
-setw -g window-status-current-fg colour81 
-setw -g window-status-fg colour138
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S #[fg=colour233,bg=colour241,bold] #H '
-
