--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -91,24 +91,24 @@ command=$HOME/.i3/ros_ip.sh
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
-[rosmasteruri]
-label=ROS_MASTER
-interval=20
-command=$HOME/.i3/ros_master_uri.sh
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [rosmasteruri]
+# label=ROS_MASTER
+# interval=20
+# command=$HOME/.i3/ros_master_uri.sh
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
-[uav_name]
-#label=UAV_NAME
-interval=20
-command=$HOME/.i3/uav_name.sh
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [uav_name]
+# #label=UAV_NAME
+# interval=20
+# command=$HOME/.i3/uav_name.sh
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [load]
 interval=5
 label= 
-command=cat /proc/loadavg | cut -d' ' -f1-3
+command=cat /proc/loadavg | cut -d' ' -f1-1
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
@@ -117,55 +117,45 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
-instance=eth0
+instance=enx00133b85141c
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
-label=
 separator=true
 
 [iface]
-instance=wlan0
+instance=wlp58s0
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
-label=
 separator=true
 
 [online-status]
 command=ping -c 1 google.com >> /dev/null||echo 'No Internet'
-color=#FF0000
-interval=20
-
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
-[volume]
-label=VOL
-label=♪
-instance=Master
-#instance=PCM
-interval=1
-signal=10
-command=~/git/linux-setup/appconfig/i3/i3blocks/volume 5 pulse
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+interval=20
+
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-#[memory]
-#label=MEM
-#separator=false
-#interval=30
+[memory]
+label=🞕
+separator=true
+interval=20
+command=~/git/linux-setup/appconfig/i3/i3blocks/memory 5 pulse
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
-#[memory]
-#label=SWAP
-#instance=swap
-#separator=false
-#interval=30
+# [memory]
+# label=SWAP
+# instance=swap
+# separator=false
+# interval=10
+# signal=10
+# command=~/git/linux-setup/appconfig/i3/i3blocks/ 5 pulse
+# color=#000000
 
 # Disk usage
 #
@@ -173,11 +163,21 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=SSD
+label=💿
 #instance=/mnt/data
 interval=30
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+separator=true
+
+
+[gpu]
+label=
+command=$HOME/.i3/gpu_selection_display.sh
+interval=30
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+separator=true
 
 [wifi]
 instance=wlan0
@@ -203,6 +203,22 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 #min_width=CPU: 100.00%
 ##separator=false
 
+# Volume indicator
+#
+# The first parameter sets the step (and units to display)
+# The second parameter overrides the mixer selection
+# See the script for details.
+[volume]
+label=VOL
+label=♪
+instance=Master
+#instance=PCM
+interval=1
+signal=10
+command=~/git/linux-setup/appconfig/i3/i3blocks/volume 5 pulse
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
 # Battery indicator
 #
 # The battery instance defaults to 0.
@@ -224,7 +240,7 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 # Date Time
 #
 [time]
-command=date '+%d/%m/%Y %H:%M:%S'
+command=date '+%d.%m.%Y %H:%M:%S'
 interval=1
 separator=true
 # color=#000000 # LIGHT COLOR_SCHEME 
