--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "doti3/i3scripts"]
 	path = doti3/i3scripts
 	url = git@github.com:justbuchanan/i3scripts.git
+[submodule "doti3/conky-draw"]
+	path = doti3/conky-draw
+	url = https://github.com/fisadev/conky-draw.git
