--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -215,7 +215,7 @@ instance=Master
 #instance=PCM
 interval=1
 signal=10
-command=~/git/linux-setup/appconfig/i3/i3blocks/volume 5 pulse
+command=~/.i3/i3blocks/volume 5 pulse
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
