The 'No Internet' message is too important not to be red.

--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -132,8 +132,7 @@ separator=true
 
 [online-status]
 command=ping -c 1 google.com >> /dev/null||echo 'No Internet'
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#ff0000
 interval=20
 
 
