--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -30,57 +30,57 @@ markup=none
 
 [101]
 command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [102]
 command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [103]
 command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [104]
 command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [105]
 command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [106]
 command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [107]
 command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [108]
 command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
@@ -88,29 +88,29 @@ separator=true
 label=ROS_IP
 interval=20
 command=$HOME/.i3/ros_ip.sh
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 # [rosmasteruri]
 # label=ROS_MASTER
 # interval=20
 # command=$HOME/.i3/ros_master_uri.sh
-# # color=#000000 # LIGHT COLOR_SCHEME 
-# color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 # [uav_name]
 # #label=UAV_NAME
 # interval=20
 # command=$HOME/.i3/uav_name.sh
-# # color=#000000 # LIGHT COLOR_SCHEME 
-# color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 [load]
 interval=5
 label= 
 command=cat /proc/loadavg | cut -d' ' -f1-1
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 # Network interface monitoring
 #
@@ -118,15 +118,15 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 instance=enx00133b85141c
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
 [iface]
 instance=wlp58s0
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 interval=10
 separator=true
 
@@ -144,8 +144,8 @@ label=🞕
 separator=true
 interval=20
 command=~/git/linux-setup/appconfig/i3/i3blocks/memory 5 pulse
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 # [memory]
 # label=SWAP
@@ -165,8 +165,8 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 label=💿
 #instance=/mnt/data
 interval=30
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 separator=true
 
 
@@ -174,8 +174,8 @@ separator=true
 label=
 command=$HOME/.i3/gpu_selection_display.sh
 interval=30
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 separator=true
 
 [wifi]
@@ -183,8 +183,8 @@ instance=wlan0
 label=
 interval=10
 separator=true
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 #[bandwidth]
 ##instance=eth0
@@ -215,8 +215,8 @@ instance=Master
 interval=1
 signal=10
 command=~/.i3/i3blocks/volume 5 pulse
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 # Battery indicator
 #
@@ -226,15 +226,15 @@ label=BAT
 label=⚡
 instance=0
 interval=30
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 [keyboard]
 label=
 interval=1
 command=~/.i3/show_keyboard_layout.sh
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 # Date Time
 #
@@ -242,15 +242,15 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 command=date '+%d.%m.%Y %H:%M:%S'
 interval=1
 separator=true
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 [clickme]
 full_text=
 command=~/.i3/shutdown_menu -p rofi
 separator=true
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#000000 # LIGHT COLOR_SCHEME ACTIVE 
+# color=#ffffff # JELLYBEANS COLOR_SCHEME 
 
 # Generic media player support
 #
