--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -28,6 +28,7 @@ command=~/git/linux-setup/appconfig/i3/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+
 [101]
 command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
@@ -235,6 +236,11 @@ interval=1
 command=~/.i3/show_keyboard_layout.sh
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
+# #transparent space for conky
+# [conky]
+# full_text=<span background="black" background_alpha="1" foreground="white">           </span>
+# markup=pango
 
 # Date Time
 #
